--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,8 @@
 	</properties>
 
 	<modules>
-		<module>initializr-actuator</module>
-		<module>initializr-docs</module>
+		<!--<module>initializr-actuator</module>-->
+		<!--<module>initializr-docs</module>-->
 		<module>initializr-generator</module>
 		<module>initializr-web</module>
 		<module>initializr-fluig</module>
@@ -210,7 +210,7 @@
 		<profile>
 			<id>full</id>
 			<modules>
-				<module>initializr-service</module>
+				<module>initializr-fluig</module>
 			</modules>
 		</profile>
 	</profiles>
